Source/WTF/benchmarks/LockSpeedTest.cpp
@@ -26,13 +26,13 @@
 #include "config.h"
 
 #include <unistd.h>
-#include <wtf/ByteLock.h>
 #include <wtf/CurrentTime.h>
 #include <wtf/Lock.h>
 #include <wtf/SpinLock.h>
 #include <wtf/StdLibExtras.h>
 #include <wtf/Threading.h>
 #include <wtf/ThreadingPrimitives.h>
+#include <wtf/WordLock.h>
 
 namespace {
 
@@ -44,7 +44,7 @@ unsigned numIterations;
     
 NO_RETURN void usage()
 {
-    printf("Usage: LockSpeedTest spinlock|lock|bytelock|mutex|all <num thread groups> <num threads per group> <work per critical section> <num noise threads> <num iterations>\n");
+    printf("Usage: LockSpeedTest spinlock|wordlock|lock|bytelock|mutex|all <num thread groups> <num threads per group> <work per critical section> <num noise threads> <num iterations>\n");
     exit(1);
 }
 
@@ -122,12 +122,12 @@ int main(int argc, char** argv)
         runBenchmark<SpinLock>("SpinLock");
         didRun = true;
     }
-    if (!strcmp(argv[1], "lock") || !strcmp(argv[1], "all")) {
-        runBenchmark<Lock>("WTF Lock");
+    if (!strcmp(argv[1], "wordlock") || !strcmp(argv[1], "all")) {
+        runBenchmark<WordLock>("WTF WordLock");
         didRun = true;
     }
-    if (!strcmp(argv[1], "bytelock") || !strcmp(argv[1], "all")) {
-        runBenchmark<ByteLock>("WTF ByteLock");
+    if (!strcmp(argv[1], "lock") || !strcmp(argv[1], "all")) {
+        runBenchmark<Lock>("WTF Lock");
         didRun = true;
     }
     if (!strcmp(argv[1], "mutex") || !strcmp(argv[1], "all")) {
